fix homepage spacing

--- a/src/style.scss
+++ b/src/style.scss
@@ -338,8 +338,8 @@ a {
 .homepage-description {
 	text-align: center;
 	width: 25em;
-	margin-top: 10vh;
-	margin-bottom: 6em;
+	margin-top: 14vh;
+	margin-bottom: 3em;
 	padding-left: 2em;
 	padding-right: 2em;
 }
@@ -361,6 +361,7 @@ a {
 
 	.homepage-description{
 		width: 45em;
+		margin-bottom: 6em;
 	}
 }
 
